--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -116,7 +116,7 @@
 
     .project {
       flex-direction: column;
-      justify-content: center;
+      // justify-content: center;
       height: 50vh;
     }
     .item {
